fix content bounds on mobile

--- a/assets/scss/_listings.scss
+++ b/assets/scss/_listings.scss
@@ -31,6 +31,7 @@
     a {
       position: relative;
       top: -5px;
+      right: 2px;
       float: right;
       font-size: 2.5rem;
       color: $offwhite2;
